# pipe

./: .gitignore  CMakeLists.txt  pipe_sever.cpp  pipe_sever.h  read_me.md
include/: NamedPipeClient.hpp  NamedPipeServer.hpp
src/: CMakeLists.txt  sample_usage.cpp
src/Client/: CMakeLists.txt  NamedPipeClient.cpp
src/Server/: CMakeLists.txt  NamedPipeSever.cpp
